--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["Constantin Nickel <constantin.nickel@gmail.com>"]
 [dependencies]
 futures = "0.1"
 hyper = "0.11"
+hyper-multipart-rfc7578 = "0.1.0-alpha3"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
