--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,10 @@ authors = ["Constantin Nickel <constantin.nickel@gmail.com>"]
 
 [dependencies]
 futures = "0.1"
-hyper = "0.11"
-hyper-multipart-rfc7578 = "0.1.0-alpha3"
+http = "0.1"
+hyper = "0.12"
+hyper-multipart-rfc7578 = "0.2.0-alpha1"
+mime = "0.3"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
@@ -17,7 +19,7 @@ url_serde = "0.2"
 
 [dependencies.hyper-tls]
 optional = true
-version = "0.1.2"
+version = "0.3"
 
 [features]
 default = ["tls"]
