--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ futures = "0.1"
 http = "0.1"
 hyper = "0.12"
 hyper-multipart-rfc7578 = "0.2.0-alpha1"
+hyper-tls = "0.3"
 mime = "0.3"
 serde = "1.0"
 serde_derive = "1.0"
@@ -16,11 +17,3 @@ serde_urlencoded = "0.5"
 tokio-core = "0.1"
 url = "1.7"
 url_serde = "0.2"
-
-[dependencies.hyper-tls]
-optional = true
-version = "0.3"
-
-[features]
-default = ["tls"]
-tls = ["hyper-tls"]
