--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "modio"
-version = "0.1.0"
+version = "0.1.0" # don't forget to update html_root_url
 description = "Rust interface for mod.io"
 readme = "README.md"
 documentation = "https://docs.rs/modio"
