--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,16 +11,20 @@ keywords = ["modio", "hyper"]
 categories = ["api-bindings", "web-programming::http-client"]
 
 [dependencies]
+bytes = "0.4"
 failure = "0.1"
 futures = "0.1"
 http = "0.1"
 hyper = "0.12"
-hyper-multipart-rfc7578 = "0.2.0-alpha2"
 hyper-tls = "0.3"
 mime = "0.3"
+mpart-async = { version = "0.2", default-features = false }
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
+tokio-codec = "0.1"
+tokio-fs = "0.1"
+tokio-io = "0.1"
 url = "1.7"
 url_serde = "0.2"
 
