--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ http = "0.1"
 hyper = "0.12"
 mime = "0.3"
 mpart-async = { version = "0.2", default-features = false }
+reqwest = { version = "0.9", default-features = false }
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
@@ -32,7 +33,7 @@ version = "0.3"
 optional = true
 
 [dependencies.hyper-rustls]
-version = "0.15"
+version = "0.16"
 optional = true
 
 [dev-dependencies]
@@ -41,6 +42,6 @@ md5 = "0.3"
 tokio = "0.1"
 
 [features]
-default = ["tls"]
-tls = ["hyper-tls"]
-rustls = ["hyper-rustls"]
+default = ["default-tls"]
+default-tls = ["hyper-tls", "reqwest/default-tls"]
+rustls-tls = ["hyper-rustls", "reqwest/rustls-tls"]
