--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ edition = "2018"
 [dependencies]
 bytes = "0.4"
 futures = "0.1"
+http = "0.1"
 mime = "0.3"
 reqwest = { version = "0.9", default-features = false }
 serde = "1.0"
