--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,26 +23,26 @@ futures-util-preview = "=0.3.0-alpha.18"
 http = "0.1"
 log = "0.4"
 mime = "0.3"
-reqwest = { default-features = false, git = "https://github.com/seanmonstar/reqwest.git" }
+reqwest = { git = "https://github.com/seanmonstar/reqwest.git", default-features = false, features = ["unstable-stream"] }
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
-tokio-codec = "=0.2.0-alpha.4"
-tokio-fs = "=0.2.0-alpha.4"
-tokio-io = "=0.2.0-alpha.4"
+tokio-codec = "=0.2.0-alpha.5"
+tokio-fs = "=0.2.0-alpha.5"
+tokio-io = "=0.2.0-alpha.5"
 url = { version = "2", features = ["serde"] }
 
 [dev-dependencies]
 dotenv = "0.14"
 env_logger = { version = "0.6", default-features = false }
 md5 = "0.6"
-tokio = "=0.2.0-alpha.4"
+tokio = "=0.2.0-alpha.5"
 
 [features]
 default = ["default-tls"]
 tls = []
 default-tls = ["reqwest/default-tls", "tls"]
-rustls-tls = ["reqwest/rustls-tls", "tls"]
+# rustls-tls = ["reqwest/rustls-tls", "tls"]
 
 [package.metadata.docs.rs]
 all-features = true
