--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ futures-util-preview = "=0.3.0-alpha.19"
 http = "0.1"
 log = "0.4"
 mime = "0.3"
-reqwest = { git = "https://github.com/seanmonstar/reqwest.git", default-features = false, features = ["unstable-stream"] }
+reqwest = { version = "=0.10.0-alpha.1", default-features = false, features = ["unstable-stream"] }
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
