--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,8 +24,7 @@ http = "0.1"
 log = "0.4"
 mime = "0.3"
 reqwest = { version = "=0.10.0-alpha.1", default-features = false, features = ["unstable-stream"] }
-serde = "1.0"
-serde_derive = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio-codec = "=0.2.0-alpha.6"
 tokio-fs = "=0.2.0-alpha.6"
