--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,9 +26,7 @@ mime = "0.3"
 reqwest = { version = "=0.10.0-alpha.1", default-features = false, features = ["unstable-stream"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tokio-codec = "=0.2.0-alpha.6"
-tokio-fs = "=0.2.0-alpha.6"
-tokio-io = "=0.2.0-alpha.6"
+tokio = { version = "=0.2.0-alpha.6", default-features = false, features = ["codec", "fs", "io"] }
 url = { version = "2", features = ["serde"] }
 
 [dev-dependencies]
