--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,29 +17,30 @@ maintenance = { status = "actively-developed" }
 
 [dependencies]
 bitflags = "1"
-bytes = "0.4"
-futures-core-preview = "=0.3.0-alpha.19"
-futures-util-preview = "=0.3.0-alpha.19"
-http = "0.1"
+bytes = "0.5"
+futures-core = "0.3"
+futures-util = { version = "0.3", features = ["sink"] }
+http = "0.2"
 log = "0.4"
 mime = "0.3"
-reqwest = { version = "=0.10.0-alpha.1", default-features = false, features = ["unstable-stream"] }
+reqwest = { version = "0.10", default-features = false, features = ["stream"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tokio = { version = "=0.2.0-alpha.6", default-features = false, features = ["codec", "fs", "io"] }
+tokio = { version = "0.2", default-features = false, features = ["fs"] }
+tokio-util = { version = "0.2", features = ["codec"] }
 url = { version = "2", features = ["serde"] }
 
 [dev-dependencies]
-dotenv = "0.14"
-env_logger = { version = "0.6", default-features = false }
-md5 = "0.6"
-tokio = "=0.2.0-alpha.6"
+dotenv = "0.15"
+env_logger = { version = "0.7", default-features = false }
+md5 = "0.7"
+tokio = { version = "0.2", features = ["full"] }
 
 [features]
 default = ["default-tls"]
 tls = []
-default-tls = ["reqwest/default-tls", "tls"]
-# rustls-tls = ["reqwest/rustls-tls", "tls"]
+default-tls = ["reqwest/native-tls", "tls"]
+rustls-tls = ["reqwest/rustls-tls", "tls"]
 
 [package.metadata.docs.rs]
 all-features = true
