Add tests for `loader::Query`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ authors = ["Constantin Nickel <constantin.nickel@gmail.com>"]
 keywords = ["modio", "hyper"]
 categories = ["api-bindings", "web-programming::http-client"]
 edition = "2018"
+exclude = ["tests/fixtures/*"]
 
 [badges]
 travis-ci = { repository = "nickelc/modio-rs" }
@@ -33,6 +34,7 @@ url = { version = "2", features = ["serde"] }
 [dev-dependencies]
 dotenv = "0.15"
 env_logger = { version = "0.7", default-features = false }
+httptest = "0.11"
 md5 = "0.7"
 tokio = { version = "0.2", features = ["full"] }
 
