--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -13,8 +13,8 @@ jobs:
     runs-on: [ubuntu-latest]
 
     steps:
-      - name: Checkout sources
-        uses: actions/checkout@v1
+      - name: Checkout
+        uses: actions/checkout@v2
 
       - name: Install rust (stable)
         uses: actions-rs/toolchain@v1
@@ -39,11 +39,10 @@ jobs:
           mv ./target/doc/* ./docs/$DIR/
 
       - name: Deploy docs
-        uses: peaceiris/actions-gh-pages@v2.5.1
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          emptyCommits: false
-          keepFiles: true
-        env:
-          ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-          PUBLISH_BRANCH: gh-pages
-          PUBLISH_DIR: ./docs
+          deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+          publish_branch: gh-pages
+          publish_dir: ./docs
+          allow_empty_commit: false
+          keep_files: true
