--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: fmt
-          args: --all -- --check
+          args: -- --check
 
   build_and_test:
     name: Build and test
@@ -54,28 +54,28 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: check
-          args: --all --examples --tests
+          args: --examples --tests
 
       - name: Check no default features
         uses: actions-rs/cargo@v1
         with:
           command: check
-          args: --all --examples --tests --no-default-features
+          args: --examples --tests --no-default-features
 
       # - name: Check `rustls-tls` feature
       #   uses: actions-rs/cargo@v1
       #   with:
       #     command: check
-      #     args: --all --examples --tests --no-default-features --features rustls-tls
+      #     args: --examples --tests --no-default-features --features rustls-tls
       #
       # - name: Check `default-tls` and `rustls-tls` feature
       #   uses: actions-rs/cargo@v1
       #   with:
       #     command: check
-      #     args: --all --examples --tests --features rustls-tls
+      #     args: --examples --tests --features rustls-tls
 
       - name: Tests
         uses: actions-rs/cargo@v1
         with:
           command: test
-          args: --all --all-features
+          args: --all-features
