--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ futures-util = { version = "0.3.4", features = ["sink"] }
 http = "0.2"
 log = "0.4"
 mime = "0.3"
+pin-project-lite = "0.1"
 reqwest = { version = "0.10", default-features = false, features = ["stream"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
