--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ authors = ["Constantin Nickel <constantin.nickel@gmail.com>"]
 keywords = ["modio", "hyper"]
 categories = ["api-bindings", "web-programming::http-client"]
 edition = "2018"
-exclude = ["tests/fixtures/*"]
+exclude = ["tests/fixtures/*", "header.png"]
 
 [badges]
 travis-ci = { repository = "nickelc/modio-rs" }
