--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -10,13 +10,13 @@ on:
 jobs:
   docs:
     name: Deploy docs to gh-pages
-    runs-on: [ubuntu-latest]
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Install rust (stable)
+      - name: Install rust (nightly)
         uses: actions-rs/toolchain@v1
         with:
           profile: minimal
@@ -24,10 +24,7 @@ jobs:
           override: true
 
       - name: Generate docs
-        uses: actions-rs/cargo@v1
-        with:
-          command: doc
-          args: --no-deps --all-features
+        run: cargo doc --no-deps --all-features
 
       - name: Prepare docs
         shell: bash -e -O extglob {0}
