Update cargo metadata
- Update keywords
- Remove deprecated crate.io badges
- Reduce size of the crate by only including files that are necessary.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,14 +7,10 @@ documentation = "https://docs.rs/modio"
 repository = "https://github.com/nickelc/modio-rs"
 license = "MIT/Apache-2.0"
 authors = ["Constantin Nickel <constantin.nickel@gmail.com>"]
-keywords = ["modio", "hyper"]
+keywords = ["modio", "client"]
 categories = ["api-bindings", "web-programming::http-client"]
 edition = "2018"
-exclude = ["tests/fixtures/*", "header.png"]
-
-[badges]
-travis-ci = { repository = "nickelc/modio-rs" }
-maintenance = { status = "actively-developed" }
+include = ["src/**/*", "LICENSE-*", "README.md", "CHANGELOG.md"]
 
 [dependencies]
 bitflags = "1"
