--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -17,11 +17,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install rust (nightly)
-        uses: actions-rs/toolchain@v1
+        uses: hecrj/setup-rust-action@v1
         with:
-          profile: minimal
-          toolchain: nightly
-          override: true
+          rust-version: nightly
 
       - name: Generate docs
         run: cargo doc --no-deps --all-features
