--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ pin-project-lite = "0.2"
 reqwest = { version = "0.11", default-features = false, features = ["multipart", "stream"] }
 serde = { version = "1.0.122", features = ["derive"] }
 serde_json = "1.0"
+serde_test = "1.0.139"
 tokio = { version = "1.6.1", default-features = false, features = ["fs"] }
 tokio-util = { version = "0.7", features = ["codec", "io"] }
 tracing = "0.1"
