--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ dotenv = "0.15"
 httptest = "0.15"
 md5 = "0.7"
 tokio = { version = "1.0", features = ["full"] }
-tracing-subscriber = "0.2"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 [features]
 default = ["default-tls"]
