Use SPDX license expression

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ description = "Rust interface for integrating https://mod.io - a modding API for
 readme = "README.md"
 documentation = "https://docs.rs/modio"
 repository = "https://github.com/nickelc/modio-rs"
-license = "MIT/Apache-2.0"
+license = "MIT OR Apache-2.0"
 authors = ["Constantin Nickel <constantin.nickel@gmail.com>"]
 keywords = ["modio", "client"]
 categories = ["api-bindings", "web-programming::http-client"]
