--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,18 +15,15 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install rust (stable)
-        uses: hecrj/setup-rust-action@v1
+        uses: dtolnay/rust-toolchain@stable
         with:
           components: clippy, rustfmt
 
       - name: Run rustfmt
-        run: cargo fmt -- --check
+        run: cargo fmt --check
 
       - name: Run clippy
-        uses: actions-rs/clippy-check@v1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          args: --all-features -- -D warnings
+        run: cargo clippy --all-features -- -D warnings
 
   docs:
     name: Build docs
@@ -37,9 +34,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install rust (nightly)
-        uses: hecrj/setup-rust-action@v1
-        with:
-          rust-version: nightly
+        uses: dtolnay/rust-toolchain@nightly
 
       - name: Generate docs
         run: cargo doc --no-deps --all-features
@@ -57,9 +52,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install rust (${{ matrix.rust }})
-        uses: hecrj/setup-rust-action@v1
+        uses: dtolnay/rust-toolchain@master
         with:
-          rust-version: ${{ matrix.rust }}
+          toolchain: ${{ matrix.rust }}
 
       - name: Check default features
         run: cargo check --examples --tests
@@ -88,8 +83,8 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install rust (${{ env.minrust }})
-        uses: hecrj/setup-rust-action@v1
+        uses: dtolnay/rust-toolchain@master
         with:
-          rust-version: ${{ env.minrust }}
+          toolchain: ${{ env.minrust }}
 
       - run: cargo check --all-features
