--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ authors = ["Constantin Nickel <constantin.nickel@gmail.com>"]
 keywords = ["modio", "client"]
 categories = ["api-bindings", "web-programming::http-client"]
 edition = "2018"
+rust-version = "1.56"
 include = ["src/**/*", "LICENSE-*", "README.md", "CHANGELOG.md"]
 
 [dependencies]
