--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,6 @@ name: ci
 
 on: [push, pull_request]
 
-env:
-  minrust: 1.56.0
-
 jobs:
   lints:
     name: Rustfmt and clippy
@@ -82,9 +79,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Install rust (${{ env.minrust }})
+      - name: Get MSRV from package metadata
+        id: msrv
+        run: cargo metadata --no-deps --format-version 1 | jq -r '"version=" + (.packages[] | select(.name == "modio")).rust_version' >> $GITHUB_OUTPUT
+
+      - name: Install rust (${{ steps.msrv.outputs.version }})
         uses: dtolnay/rust-toolchain@master
         with:
-          toolchain: ${{ env.minrust }}
+          toolchain: ${{ steps.msrv.outputs.version }}
 
       - run: cargo check --all-features
