--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,9 +68,28 @@ jobs:
       - name: Tests
         run: cargo test --all-features
 
+  minimal_versions:
+    name: Minimal crate versions
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install nightly toolchain
+        uses: dtolnay/rust-toolchain@nightly
+
+      - name: Install stable toolchain
+        uses: dtolnay/rust-toolchain@stable
+
+      - name: Install cargo-hack
+        uses: taiki-e/install-action@cargo-hack
+
+      - name: Install cargo-minimal-versions
+        uses: taiki-e/install-action@cargo-minimal-versions
+
       - name: Check minimal versions
-        if: matrix.rust == 'nightly'
-        run: cargo clean; cargo update -Z minimal-versions; cargo check --no-default-features --features rustls-tls
+        run: cargo minimal-versions check --no-default-features --features rustls-tls
 
   MSRV:
     runs-on: ubuntu-latest
