--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ serde_json = "1.0"
 tokio = { version = "1.6.1", default-features = false, features = ["fs"] }
 tokio-util = { version = "0.7", features = ["codec", "io"] }
 tracing = "0.1"
-url = { version = "2", features = ["serde"] }
+url = "2.5.3"
 
 [dev-dependencies]
 dotenv = "0.15"
