--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,4 +117,10 @@ jobs:
         with:
           toolchain: ${{ steps.msrv.outputs.version }}
 
+      - name: Downgrade dependencies
+        run: |
+          cargo update -p native-tls --precise 0.2.13
+          cargo update -p litemap --precise 0.7.4
+          cargo update -p zerofrom --precise 0.1.5
+
       - run: cargo check --all-features
