--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ form_urlencoded = "1.2.1"
 pin-project-lite = "0.2.16"
 percent-encoding = "2.3.1"
 url = "2.5.4"
+uuid = { version = "1.18.1", features = ["serde"] }
 mime = "0.3.17"
 tokio = { version = "1.43.0", default-features = false, features = ["fs", "io-util"] }
 tokio-util = { version = "0.7.13", default-features = false }
